[gd_scene load_steps=8 format=3 uid="uid://dbfqdh88nle6r"]

[ext_resource type="Script" path="res://Main folder/Minigames folder/minigames_11.gd" id="1_bmxpo"]
[ext_resource type="Texture2D" uid="uid://baun7i3kagr27" path="res://assets/visuals/bag.png" id="2_2kowp"]
[ext_resource type="Texture2D" uid="uid://b40nl8j3oumpw" path="res://assets/visuals/bag2.png" id="3_7xtke"]
[ext_resource type="Texture2D" uid="uid://ditau4bnwvnrd" path="res://assets/visuals/degree.png" id="3_vawua"]
[ext_resource type="Texture2D" uid="uid://cu1hcn34b0f7s" path="res://assets/visuals/hat.png" id="4_a7n4i"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5552x"]
size = Vector2(98, 50)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mbfww"]
size = Vector2(1087.5, 20)

[node name="Minigames" type="Node2D"]
script = ExtResource("1_bmxpo")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1082.0
offset_bottom = 722.0
color = Color(0.741176, 1, 1, 1)

[node name="BagHat" type="Area2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="BagHat"]
position = Vector2(-2, 1)
scale = Vector2(0.165029, 0.152977)
texture = ExtResource("2_2kowp")

[node name="CollisionShape2D" type="CollisionShape2D" parent="BagHat"]
position = Vector2(0, 2)
shape = SubResource("RectangleShape2D_5552x")

[node name="BagDegree" type="Area2D" parent="."]
modulate = Color(1, 0.166815, 0.37397, 1)

[node name="Sprite2D" type="Sprite2D" parent="BagDegree"]
position = Vector2(2, 1)
scale = Vector2(0.0631579, 0.0585452)
texture = ExtResource("3_7xtke")

[node name="CollisionShape2D" type="CollisionShape2D" parent="BagDegree"]
position = Vector2(2, 6)
shape = SubResource("RectangleShape2D_5552x")

[node name="Degree" type="Area2D" parent="."]
modulate = Color(0.869464, 0, 0.216165, 1)

[node name="Sprite2D" type="Sprite2D" parent="Degree"]
scale = Vector2(0.0477816, 0.0562907)
texture = ExtResource("3_vawua")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Degree"]
shape = SubResource("RectangleShape2D_5552x")

[node name="Hat" type="Area2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Hat"]
scale = Vector2(0.0720232, 0.0720232)
texture = ExtResource("4_a7n4i")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hat"]
position = Vector2(0, -11)
shape = SubResource("RectangleShape2D_5552x")

[node name="BottomZone" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BottomZone"]
position = Vector2(541.25, 724)
shape = SubResource("RectangleShape2D_mbfww")
